...
            
            List {
                actionRowButton(title: "Push NavigationView", systemImage: "arrow.forward.square.fill") {
                    setTabBadge?(("10", .first))
                    await coordinator?.navigateToPushView()
                }
                .accessibilityIdentifier("btn_pushNavigationView")

                actionRowButton(title: "Presents SheetView", systemImage: "rectangle.bottomthird.inset.fill") {
                    await coordinator?.presentSheet()
                }
                .accessibilityIdentifier("btn_presentsSheetView")
                
                actionRowButton(title: "Presents FullscreenView", systemImage: "rectangle.fill.on.rectangle.fill") {
                    await coordinator?.presentFullscreen()
                }
                
                actionRowButton(title: "Presents DetentsView", systemImage: "rectangle.split.2x1.fill") {
...
